VSE: Doing "copy to selected" with a Scene strip's input property (Camera/Sequencer) will crash Blender. #129406
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#129406
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows Windows-10-10.0.19045-SP0
Graphics card: GTX 1050 Ti
Blender Version
Broken: version: 4.2.3 LTS, branch: blender-v4.2-release, commit date: 2024-10-14 15:20, hash:
0e22e4fcea
Broken: 3.6
Worked: NA
Short description of error
In the VSE, trying to set the scene's input property (whether it is the camera or sequencer) on multiple strips using "copy to selected" in the right click menu crashes Blender.
Exact steps for others to reproduce the error
In the attached .blend file, there are 3 scenes "Edit","Scene.001" and "Scene.002". In the "Edit" scene, in the VSE, the other two scenes are added as strips. Select one strip to make it active and then select all the strips. In the VSE's "N" side-bar under "Scene" properties, right-click on the "Input" property entry and click "Copy to selected". Wait a couple seconds.
The test scene was created from the default "Video Editing" startup file using minimum steps.
Context
As of now the only sane work-around to get VSE audio out of multiple scenes edited together with the VSE is by changing the input properties to "sequencer" (which blanks out the visuals) and render out the audio separately. It would be helpful when working with many scenes, if "copy to selected" for this property wasn't bugged.
Thank you.
I can confirm this issue. Setting to high severity as it's a crash.
rna_property_override_apply_default
does explicitly callRNA_property_update_main
with nullptr scene argument. This seems to be, because the function has no good way to get active scene from anywhere.But then
RNA_property_update
is called again with scene set.So I can either do null check or get scene from
PointerRNA
. Either should work fine, since the property is owned by a scene. Null check seems to be safer though.