Fix #129406: Crash on copy to selected for scene input property

RNA update function called from `rna_property_override_apply_default`
does not have access to active `Scene`, so it is explicitly set to null.

Do null check since update function is called again with scene correctly
set later.