source/blender/makesrna/intern/rna_sequencer.cc
@@ -204,10 +204,15 @@ static void rna_Sequence_scene_switch_update(Main *bmain, Scene *scene, PointerR
 
 static void rna_Sequence_use_sequence(Main *bmain, Scene *scene, PointerRNA *ptr)
 {
+  if (scene == nullptr) {
+    return;
+  }
+
   /* General update callback. */
   rna_Sequence_invalidate_raw_update(bmain, scene, ptr);
   /* Changing recursion changes set of IDs which needs to be remapped by the copy-on-evaluation.
    * the only way for this currently is to tag the ID for ID_RECALC_SYNC_TO_EVAL. */
+
   Editing *ed = SEQ_editing_get(scene);
   if (ed) {
     Sequence *seq = (Sequence *)ptr->data;
